got it working for receiver

--- a/BeaconReceiver/Info.plist
+++ b/BeaconReceiver/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>For MySmartDoor</string>
 </dict>
 </plist>
